--- a/gbaframework/pom.xml
+++ b/gbaframework/pom.xml
@@ -12,5 +12,10 @@
     <groupId>com.github.lucbui</groupId>
     <artifactId>gbaframework</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.github.lucbui</groupId>
+            <artifactId>coreframework</artifactId>
+        </dependency>
+    </dependencies>
 </project>
