--- a/gbaframework/pom.xml
+++ b/gbaframework/pom.xml
@@ -5,17 +5,32 @@
     <parent>
         <artifactId>pkmnframework</artifactId>
         <groupId>com.github.lucbui</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.lucbui</groupId>
     <artifactId>gbaframework</artifactId>
+    <version>0.1.0</version>
 
     <dependencies>
         <dependency>
             <groupId>com.github.lucbui</groupId>
             <artifactId>coreframework</artifactId>
+            <version>0.1.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <testFailureIgnore>true</testFailureIgnore>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
